--- a/package.json
+++ b/package.json
@@ -9,7 +9,20 @@
   "private": true,
  
   "dependencies": {
+ 
+   
+  "@coreui/coreui": "^4.3.2",
+ 
+   
+  "@coreui/react": "^4.11.1",
+ 
+   
   "@emailjs/browser": "^3.11.0",
+ 
+   
+  "@material-tailwind/react": "^2.1.9",
+ 
+   
   "@testing-library/jest-dom": "^5.17.0",
  
    
@@ -22,6 +35,9 @@
   "axios": "^1.4.0",
  
    
+  "bootstrap": "^5.3.3",
+ 
+   
   "firebase": "^10.1.0",
  
    
@@ -29,6 +45,9 @@
  
    
   "ga4": "^0.0.0",
+ 
+   
+  "gsap": "^3.12.4",
  
    
   "react": "^18.2.0",
@@ -43,10 +62,10 @@
   "react-icons": "^4.10.1",
  
    
-  "react-particles": "^2.12.2",
+  "react-leaf-carousel": "^3.0.0",
  
    
-  "react-reveal": "^1.2.2",
+  "react-particles": "^2.12.2",
  
    
   "react-router-dom": "^6.15.0",
