--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
  
-  "homepage": "http://Iamkinggee.github.io/mywebbb",
+  "homepage": "http://Iamkinggee.github.io/amastore",
  
-  "name": "mywebbb",
+  "name": "amastore",
  
   "version": "0.1.0",
  
